tests/errors/duplicate_component.nm
abstract component Foo {
}

abstract component Foo {
}